# BNN

./: CMakeLists.txt  README.md  main.cpp
NN/: CMakeLists.txt
NN/include/: AdaGrad.hpp  Adam.hpp  Momentum.hpp  NesterovMomentum.hpp  Network.hpp  RMSProp.hpp  RMSProp_NesterovMomentum.hpp
